# powershift

./: .gitattributes  .gitignore  Cargo.toml  NOTICE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
crates/powershift-agent/: Cargo.toml  build.rs
crates/powershift-agent/src/: engine.rs  ipc.rs  lib.rs  main.rs  model.rs  paths.rs  power_lease.rs  process_registry.rs  process_runtime.rs  publisher.rs  runtime_reconcile.rs  scheduler.rs
crates/powershift-core/: Cargo.toml
crates/powershift-core/src/: atomic_file.rs  config.rs  lib.rs  model.rs  resolver.rs  validation.rs
crates/powershift-tray/: Cargo.toml  build.rs
crates/powershift-tray/resources/: powershift-tray.rc
crates/powershift-tray/src/: main.rs
crates/powershift-windows/: Cargo.toml
crates/powershift-windows/src/: autostart.rs  elevation.rs  error.rs  icon.rs  identity.rs  ipc_events.rs  lib.rs  manager.rs  named_pipe.rs  native.rs  powercfg.rs  process.rs  process_events.rs  runtime_paths.rs  scheduled_task.rs  single_instance.rs  wake.rs  window_events.rs
docs/: DISTRIBUTION.md  RELEASE_NOTES_1.0.0.md  RELEASE_NOTES_1.1.0.md  STABLE_RELEASE_CHECKLIST.md  SUPPORT.md
scripts/: collect-diagnostics.ps1  verify-version.ps1
src/: App.accessibility.test.ts  App.integration.test.ts  App.vue  agentRefresh.test.ts  ciWorkflow.test.ts  diagnosticsScript.test.ts  encoding.test.ts  installer.test.ts  main.ts  releaseWorkflow.test.ts  version.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: powershift-hooks.nsh
src-tauri/src/: agent_control.rs  config.rs  events.rs  icons.rs  lib.rs  main.rs  power.rs  processes.rs  shell.rs  windowing.rs
src/components/: ConfirmDialog.vue  EventsDrawer.vue  ProcessDrawer.vue  ProfileEditor.test.ts  ProfileEditor.vue  SettingsDrawer.vue
src/services/: agentApi.test.ts  agentApi.ts  autoDetect.test.ts  autoDetect.ts  configApi.test.ts  configApi.ts  eventsApi.test.ts  eventsApi.ts  executableDialog.test.ts  executableDialog.ts  gameList.test.ts  gameList.ts  iconApi.test.ts  iconApi.ts  powerApi.test.ts  powerApi.ts  processApi.test.ts  processApi.ts  shellApi.test.ts  shellApi.ts
src/theme/: style.css  style.test.ts
