[package]
name = "powershift-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[build-dependencies]
embed-resource = "3.0.9"

[dependencies]
powershift-core = { path = "../powershift-core" }
powershift-windows = { path = "../powershift-windows" }
getrandom = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }

[[bin]]
name = "powershift-agent"
path = "src/main.rs"
