[package]
name = "powershift-tray"
version.workspace = true
edition.workspace = true

[dependencies]
powershift-windows = { path = "../powershift-windows" }
serde_json = { workspace = true }

[build-dependencies]
embed-resource = "3.0.9"

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[[bin]]
name = "powershift-tray"
path = "src/main.rs"
