[package]
name = "powershift-windows"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
icons = ["dep:base64", "dep:image"]

[dependencies]
powershift-core = { path = "../powershift-core" }
base64 = { version = "0.22", optional = true }
image = { version = "0.25", default-features = false, features = ["png"], optional = true }
serde = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Power",
    "Win32_System_RemoteDesktop",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
winreg = "0.52"
windows-core = { workspace = true }
wmi = "0.18.4"
